--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,5 +24,5 @@ jobs:
         uses: shalzz/zola-deploy-action@master
         env:
           PAGES_BRANCH: gh-pages
-          BUILD_DIR: public
+          BUILD_DIR: .
           TOKEN: ${{ secrets.TOKEN }}
